fixed unix build

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
         "bindings": ">=0.3.0"
   }
   , "scripts": {
-    "install": "node preinstall.js"
+    "_install": "node preinstall.js"
   }
 }
